# python-template

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
template/: __init__.py
