[tool.poetry]
name = "template"
version = "0.1.0"
description = "A Python library template"
authors = ["Stephan Wolski"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pdoc3 = "^0.8.1"

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
