[tool.poetry]
name = "template"
version = "0.1.0"
description = "A Python library template"
authors = ["Stephan Wolski"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
pdoc3 = "^0.10.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.black]
line-length = 120
target-version = ["py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
